--- a/app.json
+++ b/app.json
@@ -5,9 +5,9 @@
     "data annotation",
     "data labeling"
   ],
-  "website": "https://labelstud.io",
-  "repository": "https://github.com/heartexlabs/label-studio",
-  "logo": "https://labelstud.io/images/opossum/heartex_icon_opossum_green.svg",
+  "website": "",
+  "repository": "",
+  "logo": "",
   "stack": "container",
   "env": {
     "LABEL_STUDIO_ONE_CLICK_DEPLOY": {
